RESOLVED FIXED157652
AX: Regressions in undo/redo accessibility from Bug 153361
https://bugs.webkit.org/show_bug.cgi?id=157652
Summary AX: Regressions in undo/redo accessibility from Bug 153361
Doug Russell
Reported 2016-05-12 17:44:28 PDT
The changes required by https://bugs.webkit.org/show_bug.cgi?id=153361 regressed undo and redo in editable text to the point that they’re effectively inaccessible. This follow on work is needed to bring us back to El Capitan parity.
Attachments
Patch (29.48 KB, patch)
2016-05-12 18:24 PDT, Doug Russell
no flags
Patch for landing (29.44 KB, patch)
2016-05-13 12:04 PDT, Doug Russell
no flags
Radar WebKit Bug Importer
Comment 1 2016-05-12 17:45:29 PDT
Doug Russell
Comment 2 2016-05-12 17:46:17 PDT
Doug Russell
Comment 3 2016-05-12 18:24:41 PDT
Doug Russell
Comment 4 2016-05-13 12:04:39 PDT
Created attachment 278859 [details] Patch for landing
WebKit Commit Bot
Comment 5 2016-05-13 12:33:56 PDT
Comment on attachment 278859 [details] Patch for landing Clearing flags on attachment: 278859 Committed r200876: <http://trac.webkit.org/changeset/200876>
WebKit Commit Bot
Comment 6 2016-05-13 12:34:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.